Trying to fix background image on mobile when users scroll down

--- a/classesPage/css/classStyles.css
+++ b/classesPage/css/classStyles.css
@@ -20,11 +20,22 @@ body {
   background-position: top;
   background-attachment: fixed;
   color: white;
-  height: auto;
-  resize: both;
+  height: 100vh;
   text-shadow: -1px 0 black, 0 2.2px black, 2.2px 0 black, 0 -1px black;
   line-height: 1.5rem;
   letter-spacing: 1px;
+  transform: scale(1.0);
+  z-index: 1;
+}
+body::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 .smc {
   display: flex;
@@ -197,7 +208,7 @@ p {
     
   }
   body {
-    background-size: 44rem 46rem;
+    background-size: 50rem 46rem;
   }
   .specSelection {
     margin: 0 auto;
